# Evaluation-Introspection-Agents

./: .gitignore  CHANGELOG.md  README.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.2.0.md  RESULTS.md  coverage.xml  pyproject.toml  readme.md
.github/workflows/: ci.yml
Project01_Evaluation_Harness_for_Agents/: Project01_Evaluation_Harness_for_Agents.py  readme.md
Project02 _Introspection_& _Root_Cause_Analysis/: project2_introspection_reports.py  readme.md
assets/benchmarks/: benchmark_commands.md  benchmark_metrics_output.txt
assets/demo/: cli_json_output.txt  cli_readable_output.txt  demo_commands.md
benchmarks/: benchmark_report.json  run_benchmark.py
benchmarks/scenarios/: planning_incident.json  planning_migration.json  planning_release_plan.json  planning_research.json  reasoning_compare.json  reasoning_debug.json  reasoning_decision.json  reasoning_math.json  (+12 more)
demos/: critic_demo.py  full_feedback_loop_demo.py  improvement_demo.py  introspection_demo.py
docs/: architecture.md  architecture_diagram.txt  benchmarking.md  demo_3_plan.md  evaluation_loop.md  introspection_schema.md  next_steps.md  presentation.md  roadmap.md  run_guide.md
examples/: customer_support.json  demo_output.txt  planning_task.json  robotics_decision.json  run_coding_demo.py  run_demo.py  safety_response.json  sample_run_log.md
project3_evaluation_introspection_agents/: project3_behavior_update.py  readme.md
results/: benchmark_report.md  latest.csv  latest.md
src/: __init__.py  agent_loop.py  evaluator.py  introspector.py  rule_memory.py
tests/: __init__.py  test_benchmark.py  test_cli.py  test_critic.py  test_evaluation_loop.py  test_feedback_loop.py  test_improver.py  test_introspector.py  test_multi_critic.py  test_results.py
(+16 files in other folders)
