[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "evaluation-introspection-agents"
version = "0.1.0"
description = "Agents that critique, inspect, and improve behavior through deterministic evaluation loops."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Aditya Bhatia" }]
dependencies = []

[project.scripts]
evaluation-agents = "evaluation_introspection_agents.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
